correciones preentrega numero 2

--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- bs -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;600&display=swap" rel="stylesheet">
     <title>Mi primer sitio</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -15,7 +18,7 @@
             <div class="row">
                 <nav class="navbar navbar-expand-lg all-navbar">
                     <div class="container-fluid">
-                      <a class="navbar-brand" href="../index.html"><img src="../assets/sky rose (1).jpg" alt=""></a>
+                      <a class="navbar-brand" href="../index.html"><img class="miiconodelnav" src="../assets/sky rose (2) (1).png" alt=""></a>
                       <button class="navbar-toggler navbar-mobile" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -31,8 +34,8 @@
                           </a>
                           <ul class="dropdown-menu">
                             <li><a class="dropdown-item color-nav" href="#">Mezcla y Mastering</a></li>
-                            <li><a class="dropdown-item color-nav" href="#">Beat Personalizado</a></li>
-                            <li><a class="dropdown-item color-nav" href="#">Produccion Completa</a></li>
+                            <li><a class="dropdown-item color-nav disabled" href="#">Beat Personalizado</a></li>
+                            <li><a class="dropdown-item color-nav disabled" href="#">Produccion Completa</a></li>
                           </ul>
                           <li class="nav-item">
                             <a class="nav-link color-nav" href="../paginas/sobremi.html">Sobre Mi</a>
@@ -54,7 +57,7 @@
     <div class="card text-bg-dark">
       <img src="../assets/Reveal15.jpg" class="card-img img-fluid" alt="...">
       <div class="card-img-overlay text-center align-item-center">
-        <div class="titulo">
+        <div class="titulo mt-5">
           <h5 class="card-title display-5">Mezcla y Master</h5>
         <p class="card-texts"> <strong>Haz que tu música suene profesional al instante con una buena mezcla</strong></p>
         </div>
@@ -64,7 +67,7 @@
   </section>
   <section>
       <div class="container-fluid col-sm-12">
-        <div class="row text-center MyM">
+        <div class="row text-center MyM h2">
             <h5>Este servicio incluye la edición de pistas, volúmenes, efectos y todo lo necesario para que tu canción suene profesional. Masterización opcional para conseguir un volumen comercial y publicar a través de las principales plataformas digitales (Youtube, Spotify, Itunes…). La versión final se entrega en formato WAV de alta calidad para su publicación y en MP3 para usar en cualquier dispositivo y compartirlo con facilidad.</h5>
             <h5>Puedes ponerte en contacto a través del formulario inferior. En función de la información transmitida, se enviará una oferta con la descripción del trabajo, precio del servicio y fecha de entrega.</h5>
             <h5>Una vez aceptada la oferta, tras el ingreso del importe solicitado vía Paypal, estableceremos el medio de comunicación más conveniente para el envío de archivos y respuestas. Una vez tenga las pistas y tus indicaciones, comenzaré el proceso de mezcla. Te iré actualizando del estado de tu canción. La comunicación es esencial para que todo quede tal y como quieres. Unos días después recibirás el resultado (en formato mp3, con voicetag).</h5>
@@ -78,7 +81,7 @@
   <div class="container">
     <div class="row footer1">
       <div class="col-lg-7">
-       <img src="../assets/sky rose (1).jpg" alt="" class="logodelfooter">
+       <img src="../assets/sky rose (2) (1).png" alt="" class="logodelfooter">
        <p class="parrafodelfooter col-lg-7">Sound Engineer, Beatmaker, Mc, Artist & Technician.
          Making and loving music since 2000.
          
