--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- bs -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;600&display=swap" rel="stylesheet">
     <title>Mi primer sitio</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -15,8 +18,8 @@
         <div class="row">
             <nav class="navbar navbar-expand-lg all-navbar">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="../index.html"><img src="../assets/sky rose (1).jpg" alt=""></a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                  <a class="navbar-brand" href="../index.html"><img class="miiconodelnav" src="../assets/sky rose (2) (1).png" alt=""></a>
+                  <button class="navbar-toggler navbar-mobile" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                     <div class="collapse navbar-collapse navbar-mia" id="navbarNavDropdown">
@@ -49,10 +52,10 @@
     </div>
 </header>
 <main>
-    <div class="container">
+  <h1 class="display-5 text-white mt-3 ps-4">Contacto</h1>
+    <div class="container mt-4 mb-4">
       <div class="row">
-        <h1 class="display-5">Contacto</h1>
-        <form class="bgblack">
+         <form class="bgblack p-4">
           <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Tu nombre</label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -60,7 +63,7 @@
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Tu correo</label>
             <input type="password" class="form-control" id="exampleInputPassword1">
-            <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con nadie más.</div>
+            <div id="emailHelp" class="form-text text-white">Nunca compartiremos su correo electrónico con nadie más.</div>
           </div>
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Mensaje</label>
@@ -70,7 +73,7 @@
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Verificado</label>
           </div>
-          <button type="submit" class="btn btn-primary">Enviar</button>
+          <button type="submit" class="btn btn-dark mibotondeenviar">Enviar</button>
         </form>
       </div>
     </div>
@@ -79,7 +82,7 @@
   <div class="container">
     <div class="row footer1">
       <div class="col-lg-7">
-       <img src="../ejercicio/assets/sky rose (1).jpg" alt="" class="logodelfooter">
+       <img src="../assets/sky rose (2) (1).png" alt="" class="logodelfooter">
        <p class="parrafodelfooter col-lg-7">Sound Engineer, Beatmaker, Mc, Artist & Technician.
          Making and loving music since 2000.
          
