--- a/paginas/sobremi.html
+++ b/paginas/sobremi.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- bs -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;600&display=swap" rel="stylesheet">
     <title>Mi primer sitio</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -15,8 +18,8 @@
         <div class="row">
             <nav class="navbar navbar-expand-lg all-navbar">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="../index.html"><img src="../assets/sky rose (1).jpg" alt=""></a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                  <a class="navbar-brand" href="../index.html"><img class="miiconodelnav" src="../assets/sky rose (2) (1).png" alt=""></a>
+                  <button class="navbar-toggler navbar-mobile" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                     <div class="collapse navbar-collapse navbar-mia" id="navbarNavDropdown">
@@ -50,24 +53,24 @@
  </header>
  <main>
   <div class="container">
-    <div class="row text-center">
-      <h1 class="display-5">Acerca de</h1>
-    </div>
     <div class="text-center">
-      <img src="../assets/sky rose.jpg" class="rounded img-fluid" alt="...">
+      <img src="../assets/sky rose.jpg" class="img-fluid biografialogo mt-5" alt="logo de productor">
     </div>
-    <div class="row text-center">
-      <h2 class="display-6">Biografia</h2>
-      <p>Agustin Bazan tambien conocido como "BlackRose" es un Artista/Productor musical de Cordoba, Argentina. Nacido el 26 de Noviembre del 2000. Actualmente tiene 22 años y se dedica principalmente a la produccion de instrumentales de generos como R/B, Trapsoul, Reggaeton, Deep House.</p>
+
+    <div class="container">
+    <div class="row">
+      <h2 class="text-center display-6 pt-4"><u>Biografia</u></h2>
+      <p class="text-center mx-auto w-75 pt-4 mibiografia">Agustin Bazan tambien conocido como "BlackRose" es un Artista/Productor musical de Cordoba, Argentina. Nacido el 26 de Noviembre del 2000. Actualmente tiene 22 años y se dedica principalmente a la produccion de instrumentales de generos como <strong>R/B, Trapsoul, Reggaeton, Deep House</strong>.</p>
     </div>
-  </div>
+    </div>
+      
  </main>
 
  <footer>
   <div class="container">
     <div class="row footer1">
       <div class="col-lg-7">
-       <img src="../ejercicio/assets/sky rose (1).jpg" alt="" class="logodelfooter">
+       <img src="../assets/sky rose (2) (1).png" alt="" class="logodelfooter">
        <p class="parrafodelfooter col-lg-7">Sound Engineer, Beatmaker, Mc, Artist & Technician.
          Making and loving music since 2000.
          
