--- a/paginas/beatstore.html
+++ b/paginas/beatstore.html
@@ -68,12 +68,12 @@
       </div>
   
       <div class="row mt-5 contenedordebeats border-bottom">
-        <div class="col-lg-2"> <img class="mb-2" src="../assets/Nueva carpeta/image (1).png" alt="rnb chill girl"></div>
-        <div class="col-lg-2">"Bordeaux"</div>
-        <div class="col-lg-2">03:47</div>
-        <div class="col-lg-2">103</div>
-        <div class="col-lg-2">The Weeknd Smooth Rnb</div>
-        <div class="col-lg-2 d-flex">
+        <div class="col-lg-2"> <img class="mb-2 ms-3" src="../assets/Nueva carpeta/image (1).png" alt="rnb chill girl"></div>
+        <div class="col-lg-2 mt-5">"Bordeaux"</div>
+        <div class="col-lg-2 mt-5">03:23</div>
+        <div class="col-lg-2 mt-5">137</div>
+        <div class="col-lg-2 mt-5">The Weeknd Smooth Rnb</div>
+        <div class="col-lg-2 d-flex mt-5 ">
           <div class="ps-4"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
             <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
             <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
@@ -85,16 +85,23 @@
             <button type="button" class="btn btn-danger buyboton mb-2 d-flex"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-check" viewBox="0 0 16 16">
               <path d="M11.354 6.354a.5.5 0 0 0-.708-.708L8 8.293 6.854 7.146a.5.5 0 1 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0l3-3z"/>
               <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-            </svg> $29.99</button></div>
+            </svg> $29.99</button>
+          </div> 
+        </div>
+        <div class="row">
+          <audio class="bordeaux" controls>
+            <source src="../assets/Bordeaux-Gmaj-137.mp3" type="audio/mpeg">
+            Tu navegador no soporta el elemento audio.
+          </audio>
         </div>
       </div>
       <div class="row mt-3 contenedordebeats border-bottom">
-        <div class="col-lg-2"> <img class="mb-2" src="../assets/Nueva carpeta/image (2).png" alt=""></div>
-        <div class="col-lg-2">"2010"</div>
-        <div class="col-lg-2">03:15</div>
-        <div class="col-lg-2">120</div>
-        <div class="col-lg-2">Mora Drake urban-house </div>
-        <div class="col-lg-2 d-flex">
+        <div class="col-lg-2"> <img class="mb-2 ms-3" src="../assets/Nueva carpeta/image (2).png" alt=""></div>
+        <div class="col-lg-2 mt-5">"2010"</div>
+        <div class="col-lg-2 mt-5">03:15</div>
+        <div class="col-lg-2 mt-5">116</div>
+        <div class="col-lg-2 mt-5">Mora Drake urban-house </div>
+        <div class="col-lg-2 d-flex mt-5">
           <div class="ps-4"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
             <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
             <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
@@ -107,16 +114,22 @@
               <path d="M11.354 6.354a.5.5 0 0 0-.708-.708L8 8.293 6.854 7.146a.5.5 0 1 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0l3-3z"/>
               <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
             </svg> $29.99</button></div>
+        </div>
+        <div class="row">
+          <audio class="veintediez" controls>
+            <source src="../assets/Cmin-116bpm.mp3" type="audio/mpeg">
+            Tu navegador no soporta el elemento audio.
+          </audio>
         </div>
       </div>
       <div class="row mt-3 contenedordebeats border-bottom">
-        <div class="col-lg-2"> <img class="mb-2" src="../assets/Nueva carpeta/image (3).png" alt=""></div>
-        <div class="col-lg-2">"Outside the club"</div>
-        <div class="col-lg-2">02:56</div>
-        <div class="col-lg-2">95</div>
-        <div class="col-lg-2">Bryson Tiller</div>
-        <div class="col-lg-2 d-flex">
-          <div class="ps-4"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+        <div class="col-lg-2"> <img class="mb-2 ms-3" src="../assets/Nueva carpeta/image (3).png" alt=""></div>
+        <div class="col-lg-2 mt-5">"Outside the club"</div>
+        <div class="col-lg-2 mt-5">02:56</div>
+        <div class="col-lg-2 mt-5">131</div>
+        <div class="col-lg-2 mt-5">Bryson Tiller</div>
+        <div class="col-lg-2 d-flex mt-5">
+          <div class=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
             <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
             <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
           </svg></div>
@@ -129,6 +142,11 @@
               <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
             </svg> $29.99</button></div>
         </div>
+        <div class="row">
+          <audio class="otc" controls>
+            <source src="../assets/OutsideTheClub-131bpm-Db-Minor.mp3" type="audio/mpeg">
+            Tu navegador no soporta el elemento audio.
+          </audio>
       </div>
 
     </div>
