--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;600&display=swap" rel="stylesheet">
-    <title>Mi primer sitio</title>
+    <title>Instrumentales Trapsoul, Rnb, Urban House | BlackRose Beats</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -67,11 +67,11 @@
   </section>
   <section>
       <div class="container-fluid col-sm-12">
-        <div class="row text-center MyM h2">
-            <h5>Este servicio incluye la edición de pistas, volúmenes, efectos y todo lo necesario para que tu canción suene profesional. Masterización opcional para conseguir un volumen comercial y publicar a través de las principales plataformas digitales (Youtube, Spotify, Itunes…). La versión final se entrega en formato WAV de alta calidad para su publicación y en MP3 para usar en cualquier dispositivo y compartirlo con facilidad.</h5>
-            <h5>Puedes ponerte en contacto a través del formulario inferior. En función de la información transmitida, se enviará una oferta con la descripción del trabajo, precio del servicio y fecha de entrega.</h5>
-            <h5>Una vez aceptada la oferta, tras el ingreso del importe solicitado vía Paypal, estableceremos el medio de comunicación más conveniente para el envío de archivos y respuestas. Una vez tenga las pistas y tus indicaciones, comenzaré el proceso de mezcla. Te iré actualizando del estado de tu canción. La comunicación es esencial para que todo quede tal y como quieres. Unos días después recibirás el resultado (en formato mp3, con voicetag).</h5>
-            <h5>Tras el feedback con el cliente se procederán a hacer los cambios necesarios. Una vez estés satisfecho con tu canción, tras el pago restante, recibirás el archivo final sin tags de voz en formato WAV y MP3</h5>  
+        <div class="row text-center MyM h2 margen-texto">
+            <h5 class="margen-texto">Este servicio incluye la edición de pistas, volúmenes, efectos y todo lo necesario para que tu canción suene profesional. Masterización opcional para conseguir un volumen comercial y publicar a través de las principales plataformas digitales (Youtube, Spotify, Itunes…). La versión final se entrega en formato WAV de alta calidad para su publicación y en MP3 para usar en cualquier dispositivo y compartirlo con facilidad.</h5>
+            <h5 class="margen-texto">Puedes ponerte en contacto a través del formulario inferior. En función de la información transmitida, se enviará una oferta con la descripción del trabajo, precio del servicio y fecha de entrega.</h5>
+            <h5 class="margen-texto">Una vez aceptada la oferta, tras el ingreso del importe solicitado vía Paypal, estableceremos el medio de comunicación más conveniente para el envío de archivos y respuestas. Una vez tenga las pistas y tus indicaciones, comenzaré el proceso de mezcla. Te iré actualizando del estado de tu canción. La comunicación es esencial para que todo quede tal y como quieres. Unos días después recibirás el resultado (en formato mp3, con voicetag).</h5>
+            <h5 class="margen-texto">Tras el feedback con el cliente se procederán a hacer los cambios necesarios. Una vez estés satisfecho con tu canción, tras el pago restante, recibirás el archivo final sin tags de voz en formato WAV y MP3</h5>  
       </div>
       </div>
   </section>
@@ -105,7 +105,7 @@
     <div class="row">
       <p class="text-center copyright titulos">©2023 BlackRose</p>
      <div>
-      <ul class="col-lg-12 text-center redesmenu">
+      <ul class="col-lg-12 d-flex text-center redesmenu">
         <li class="col-4"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-youtube redeslogo" viewBox="0 0 16 16">
           <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
         </svg></li>
